feat: build for mac intel

--- a/reverb/BUILD
+++ b/reverb/BUILD
@@ -1,14 +1,6 @@
 # Description: Reverb is an efficient and easy to use prioritized replay system designed for ML research.
-
-load(
-    "//reverb/cc/platform:build_rules.bzl",
-    "reverb_absl_deps",
-    "reverb_py_test",
-    "reverb_pybind_deps",
-    "reverb_pybind_extension",
-    "reverb_pytype_library",
-    "reverb_pytype_strict_library",
-)
+load("@rules_python//python:defs.bzl", "py_library", "py_test")
+load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
 
 package(default_visibility = [":__subpackages__"])
 
@@ -16,7 +8,16 @@ licenses(["notice"])
 
 exports_files(["LICENSE"])
 
-reverb_pytype_strict_library(
+config_setting(
+    name = "macos",
+    values = {
+        "apple_platform_type": "macos",
+        "cpu": "darwin",
+    },
+    visibility = ["//visibility:public"],
+)
+
+py_library(
     name = "reverb",
     srcs = ["__init__.py"],
     srcs_version = "PY3",
@@ -38,66 +39,10 @@ reverb_pytype_strict_library(
     ],
 )
 
-reverb_pytype_strict_library(
-    name = "rate_limiters",
-    srcs = ["rate_limiters.py"],
-    srcs_version = "PY3",
-    deps = [
-        ":pybind",
-    ],
-)
-
-reverb_pytype_library(
-    name = "client",
-    srcs = ["client.py"],
-    srcs_version = "PY3",
-    strict_deps = True,
-    deps = [
-        ":errors",
-        ":pybind",
-        ":replay_sample",
-        ":reverb_types",
-        ":structured_writer",
-        ":trajectory_writer",
-    ],
-)
-
-reverb_pytype_library(
-    name = "errors",
-    srcs = ["errors.py"],
-    srcs_version = "PY3",
-    strict_deps = True,
-    deps = [],
-)
-
-reverb_pytype_library(
-    name = "server",
-    srcs = ["server.py"],
-    srcs_version = "PY3",
-    strict_deps = True,
-    deps = [
-        ":client",
-        ":item_selectors",
-        ":pybind",
-        ":rate_limiters",
-        ":reverb_types",
-        "//reverb/platform/default:checkpointers",
-    ],
-)
-
-reverb_pytype_library(
-    name = "replay_sample",
-    srcs = ["replay_sample.py"],
-    srcs_version = "PY3",
-    strict_deps = True,
-)
-
-reverb_pybind_extension(
+pybind_extension(
     name = "pybind",
     srcs = ["pybind.cc"],
-    module_name = "libpybind",
-    pytype_srcs = ["pybind.pyi"],
-    srcs_version = "PY3ONLY",
+    copts = ["-pthread"],
     visibility = [":__subpackages__"],
     deps = [
         "//reverb/cc:chunker",
@@ -121,88 +66,128 @@ reverb_pybind_extension(
         "//reverb/cc/selectors:uniform",
         "//reverb/cc/support:tf_util",
         "//reverb/cc/table_extensions:interface",
-    ] + reverb_pybind_deps() + reverb_absl_deps(),
-)
-
-reverb_pytype_library(
-    name = "tf_client",
-    srcs = ["tf_client.py"],
-    srcs_version = "PY3",
-    strict_deps = True,
-    deps = [
-        ":replay_sample",
-        "//reverb/cc/ops:gen_reverb_ops",
+        "@com_google_absl//absl/random",
     ],
 )
 
-reverb_pytype_library(
+py_library(
+    name = "rate_limiters",
+    srcs = ["rate_limiters.py"],
+    data = [":pybind.so"],
+    srcs_version = "PY3",
+)
+
+py_library(
+    name = "client",
+    srcs = ["client.py"],
+    data = [":pybind.so"],
+    srcs_version = "PY3",
+    deps = [
+        ":errors",
+        ":replay_sample",
+        ":reverb_types",
+        ":structured_writer",
+        ":trajectory_writer",
+    ],
+)
+
+py_library(
+    name = "errors",
+    srcs = ["errors.py"],
+    srcs_version = "PY3",
+    deps = [],
+)
+
+py_library(
+    name = "server",
+    srcs = ["server.py"],
+    data = [":pybind.so"],
+    srcs_version = "PY3",
+    deps = [
+        ":client",
+        ":item_selectors",
+        ":rate_limiters",
+        ":reverb_types",
+        "//reverb/platform/default:checkpointers",
+    ],
+)
+
+py_library(
+    name = "replay_sample",
+    srcs = ["replay_sample.py"],
+    srcs_version = "PY3",
+)
+
+py_library(
+    name = "tf_client",
+    srcs = ["tf_client.py"],
+    data = ["//reverb/cc/ops:gen_reverb_ops"],
+    srcs_version = "PY3",
+    deps = [
+        ":replay_sample",
+    ],
+)
+
+py_library(
     name = "trajectory_dataset",
     srcs = ["trajectory_dataset.py"],
+    data = ["//reverb/cc/ops:gen_reverb_ops"],
     srcs_version = "PY3",
-    strict_deps = True,
     visibility = [":__subpackages__"],
     deps = [
         ":client",
         ":replay_sample",
-        "//reverb/cc/ops:gen_reverb_ops",
     ],
 )
 
-reverb_pytype_library(
+py_library(
     name = "timestep_dataset",
     srcs = ["timestep_dataset.py"],
+    data = ["//reverb/cc/ops:gen_reverb_ops"],
     srcs_version = "PY3",
-    strict_deps = True,
     visibility = ["//visibility:private"],
     deps = [
         ":client",
         ":replay_sample",
-        "//reverb/cc/ops:gen_reverb_ops",
     ],
 )
 
-reverb_pytype_library(
+py_library(
     name = "reverb_types",
     srcs = ["reverb_types.py"],
+    data = [":pybind.so"],
     srcs_version = "PY3",
-    strict_deps = True,
-    deps = [
-        ":pybind",
-        "//reverb/cc:schema_py_pb2",
-    ],
+    deps = ["//reverb/cc:schema_py_pb2"],
 )
 
-reverb_pytype_strict_library(
+py_library(
     name = "structured_writer",
     srcs = ["structured_writer.py"],
+    data = [":pybind.so"],
     srcs_version = "PY3",
     deps = [
         ":errors",
-        ":pybind",
         ":reverb_types",
         "//reverb/cc:patterns_py_pb2",
     ],
 )
 
-reverb_pytype_strict_library(
+py_library(
     name = "item_selectors",
     srcs = ["item_selectors.py"],
+    data = [":pybind.so"],
     srcs_version = "PY3",
-    deps = [":pybind"],
 )
 
-reverb_pytype_library(
+py_library(
     name = "trajectory_writer",
     srcs = ["trajectory_writer.py"],
+    data = [":pybind.so"],
     srcs_version = "PY3",
-    strict_deps = True,
-    deps = [
-        ":errors",
-        ":pybind",
-    ],
+    deps = [":errors"],
 )
 
-reverb_py_test(
+py_test(
     name = "client_test",
     srcs = ["client_test.py"],
     python_version = "PY3",
@@ -216,20 +201,20 @@ reverb_py_test(
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "server_test",
     srcs = ["server_test.py"],
+    data = [":pybind.so"],
     python_version = "PY3",
     deps = [
         ":client",
         ":item_selectors",
-        ":pybind",
         ":rate_limiters",
         ":server",
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "tf_client_test",
     timeout = "short",
     srcs = ["tf_client_test.py"],
@@ -244,7 +229,7 @@ reverb_py_test(
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "timestep_dataset_test",
     srcs = ["timestep_dataset_test.py"],
     python_version = "PY3",
@@ -259,7 +244,7 @@ reverb_py_test(
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "timestep_dataset_eager_test",
     srcs = ["timestep_dataset_eager_test.py"],
     deps = [
@@ -268,7 +253,7 @@ reverb_py_test(
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "trajectory_dataset_test",
     srcs = ["trajectory_dataset_test.py"],
     python_version = "PY3",
@@ -283,7 +268,7 @@ reverb_py_test(
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "trajectory_dataset_eager_test",
     srcs = ["trajectory_dataset_eager_test.py"],
     deps = [
@@ -292,7 +277,7 @@ reverb_py_test(
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "rate_limiters_test",
     srcs = ["rate_limiters_test.py"],
     python_version = "PY3",
@@ -301,7 +286,7 @@ reverb_py_test(
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "pybind_test",
     srcs = ["pybind_test.py"],
     python_version = "PY3",
@@ -310,20 +295,20 @@ reverb_py_test(
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "trajectory_writer_test",
     srcs = ["trajectory_writer_test.py"],
+    data = [":pybind.so"],
     python_version = "PY3",
     deps = [
         ":client",
         ":errors",
-        ":pybind",
         ":server",
         ":trajectory_writer",
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "structured_writer_test",
     srcs = ["structured_writer_test.py"],
     python_version = "PY3",
@@ -334,21 +319,20 @@ reverb_py_test(
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "replay_sample_test",
     srcs = ["replay_sample_test.py"],
+    data = [":pybind.so"],
     python_version = "PY3",
     deps = [
-        ":pybind",
         ":replay_sample",
     ],
 )
 
-reverb_pytype_library(
+py_library(
     name = "pattern_dataset",
     srcs = ["pattern_dataset.py"],
     srcs_version = "PY3",
-    strict_deps = False,
     tags = ["pytype_unchecked_annotations"],
     deps = [
         ":replay_sample",
@@ -358,7 +342,7 @@ reverb_pytype_library(
     ],
 )
 
-reverb_py_test(
+py_test(
     name = "pattern_dataset_test",
     srcs = ["pattern_dataset_test.py"],
     deps = [
