--- a/reverb/cc/BUILD
+++ b/reverb/cc/BUILD
@@ -1,17 +1,8 @@
 # Description: Reverb is an efficient and easy to use prioritized replay system designed for ML research.
-
-load(
-    "//reverb/cc/platform:build_rules.bzl",
-    "reverb_absl_deps",
-    "reverb_cc_grpc_library",
-    "reverb_cc_library",
-    "reverb_cc_proto_library",
-    "reverb_cc_test",
-    "reverb_grpc_deps",
-    "reverb_py_proto_library",
-    "reverb_pybind_deps",
-    "reverb_tf_deps",
-)
+load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library", "py_grpc_library")
+load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test", "cc_proto_library")
+load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
 
 package(default_visibility = ["//reverb:__subpackages__"])
 
@@ -19,7 +10,7 @@ licenses(["notice"])
 
 exports_files(["LICENSE"])
 
-reverb_cc_test(
+cc_test(
     name = "chunk_store_test",
     srcs = ["chunk_store_test.cc"],
     deps = [
@@ -28,10 +19,10 @@ reverb_cc_test(
         "//reverb/cc/platform:status_matchers",
         "//reverb/cc/platform:thread",
         "//reverb/cc/testing:proto_test_util",
-    ] + reverb_absl_deps(),
+    ]
 )
 
-reverb_cc_test(
+cc_test(
     name = "rate_limiter_test",
     srcs = ["rate_limiter_test.cc"],
     deps = [
@@ -40,10 +31,10 @@ reverb_cc_test(
         "//reverb/cc/platform:thread",
         "//reverb/cc/selectors:uniform",
         "//reverb/cc/testing:proto_test_util",
-    ] + reverb_absl_deps(),
+    ]
 )
 
-reverb_cc_test(
+cc_test(
     name = "table_test",
     srcs = ["table_test.cc"],
     deps = [
@@ -58,23 +49,23 @@ reverb_cc_test(
         "//reverb/cc/support:task_executor",
         "//reverb/cc/table_extensions:interface",
         "//reverb/cc/testing:proto_test_util",
-    ] + reverb_tf_deps() + reverb_absl_deps(),
+    ]
 )
 
-reverb_cc_test(
+cc_test(
     name = "tensor_compression_test",
     srcs = ["tensor_compression_test.cc"],
     deps = [
         ":tensor_compression",
         "//reverb/cc/testing:tensor_testutil",
-    ] + reverb_tf_deps(),
+    ]
 )
 
-reverb_cc_test(
+cc_test(
     name = "sampler_test",
     srcs = ["sampler_test.cc"],
     deps = [
-        ":reverb_service_cc_grpc_proto",
+        ":reverb_service_cc_grpc",
         ":reverb_service_cc_proto",
         ":sampler",
         ":table",
@@ -86,15 +77,15 @@ reverb_cc_test(
         "//reverb/cc/testing:proto_test_util",
         "//reverb/cc/testing:tensor_testutil",
         "//reverb/cc/testing:time_testutil",
-    ] + reverb_tf_deps() + reverb_grpc_deps() + reverb_absl_deps(),
+    ]
 )
 
-reverb_cc_test(
+cc_test(
     name = "writer_test",
     srcs = ["writer_test.cc"],
     deps = [
         ":client",
-        ":reverb_service_cc_grpc_proto",
+        ":reverb_service_cc_grpc",
         ":reverb_service_cc_proto",
         ":writer",
         "//reverb/cc/platform:logging",
@@ -106,52 +97,61 @@ reverb_cc_test(
         "//reverb/cc/support:trajectory_util",
         "//reverb/cc/support:uint128",
         "//reverb/cc/testing:proto_test_util",
-    ] + reverb_tf_deps() + reverb_grpc_deps() + reverb_absl_deps(),
+    ]
 )
 
-reverb_cc_test(
+cc_test(
     name = "client_test",
     srcs = ["client_test.cc"],
     deps = [
         ":chunker",
         ":client",
-        ":reverb_service_cc_grpc_proto",
+        ":reverb_service_cc_grpc",
         ":reverb_service_cc_proto",
         ":trajectory_writer",
         "//reverb/cc/platform:status_matchers",
         "//reverb/cc/support:uint128",
         "//reverb/cc/testing:proto_test_util",
-    ] + reverb_grpc_deps(),
+    ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "errors",
     srcs = ["errors.cc"],
     hdrs = ["errors.h"],
     visibility = [
         "//reverb:__subpackages__",
     ],
-    deps = reverb_absl_deps(),
+    deps = [
+        "@com_google_absl//absl/status",
+        "@local_config_tf//:tf_header_lib"
+    ]
 )
 
-reverb_cc_library(
+cc_library(
     name = "conversions",
     srcs = ["conversions.cc"],
     hdrs = ["conversions.h"],
-    deps = reverb_pybind_deps() + reverb_absl_deps(),
+    deps = [
+        "@local_config_tf//:numpy_headers",
+        "@local_config_python//:python_headers",
+        "@local_config_tf//:tf_header_lib",
+    ]
 )
 
-reverb_cc_library(
+cc_library(
     name = "chunk_store",
     srcs = ["chunk_store.cc"],
     hdrs = ["chunk_store.h"],
     deps = [
         ":schema_cc_proto",
         "//reverb/cc/platform:hash_map",
-    ] + reverb_absl_deps(),
+        "@local_config_tf//:tf_header_lib",
+        "@com_google_absl//absl/status",
+    ]
 )
 
-reverb_cc_library(
+cc_library(
     name = "table",
     srcs = [
         "rate_limiter.cc",
@@ -162,7 +162,7 @@ reverb_cc_library(
         "table.h",
     ],
     visibility = ["//reverb:__subpackages__"],
-    deps = [
+    deps = depset([
         ":chunk_store",
         ":errors",
         ":schema_cc_proto",
@@ -176,10 +176,10 @@ reverb_cc_library(
         "//reverb/cc/support:task_executor",
         "//reverb/cc/support:trajectory_util",
         "//reverb/cc/table_extensions:interface",
-    ] + reverb_absl_deps() + reverb_tf_deps(),
+    ]),
 )
 
-reverb_cc_library(
+cc_library(
     name = "tensor_compression",
     srcs = ["tensor_compression.cc"],
     hdrs = ["tensor_compression.h"],
@@ -187,17 +187,35 @@ reverb_cc_library(
     deps = [
         "//reverb/cc/platform:logging",
         "//reverb/cc/platform:snappy",
-    ] + reverb_tf_deps(),
+        "@com_google_absl//absl/base",
+        "@com_google_absl//absl/base:core_headers",
+        "@com_google_absl//absl/functional:bind_front",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/numeric:int128",
+        "@com_google_absl//absl/random",
+        "@com_google_absl//absl/random:distributions",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:cord",
+        "@com_google_absl//absl/strings:str_format",
+        "@com_google_absl//absl/synchronization",
+        "@com_google_absl//absl/time",
+        "@com_google_absl//absl/types:optional",
+        "@com_google_absl//absl/types:span",
+        "@com_google_absl//absl/flags:flag",
+        "@local_config_tf//:tf_header_lib",
+    ]
 )
 
-reverb_cc_library(
+cc_library(
     name = "sampler",
     srcs = ["sampler.cc"],
     hdrs = ["sampler.h"],
-    deps = [
+    deps = depset([
         ":chunk_store",
         ":errors",
-        ":reverb_service_cc_grpc_proto",
+        ":reverb_service_cc_grpc",
         ":reverb_service_cc_proto",
         ":schema_cc_proto",
         ":table",
@@ -212,16 +230,16 @@ reverb_cc_library(
         "//reverb/cc/support:signature",
         "//reverb/cc/support:tf_util",
         "//reverb/cc/support:trajectory_util",
-    ] + reverb_tf_deps() + reverb_grpc_deps() + reverb_absl_deps(),
+    ]),
 )
 
-reverb_cc_library(
+cc_library(
     name = "writer",
     srcs = ["writer.cc"],
     hdrs = ["writer.h"],
     visibility = ["//reverb:__subpackages__"],
-    deps = [
-        ":reverb_service_cc_grpc_proto",
+    deps = depset([
+        ":reverb_service_cc_grpc",
         ":reverb_service_cc_proto",
         ":schema_cc_proto",
         ":tensor_compression",
@@ -233,17 +251,19 @@ reverb_cc_library(
         "//reverb/cc/support:signature",
         "//reverb/cc/support:tf_util",
         "//reverb/cc/support:trajectory_util",
-    ] + reverb_tf_deps() + reverb_grpc_deps() + reverb_absl_deps(),
+        "@com_google_absl//absl/random",
+        "@com_google_absl//absl/functional:bind_front",
+    ]),
 )
 
-reverb_cc_library(
+cc_library(
     name = "trajectory_writer",
     srcs = ["trajectory_writer.cc"],
     hdrs = ["trajectory_writer.h"],
     visibility = ["//reverb:__subpackages__"],
-    deps = [
+    deps = depset([
         ":chunker",
-        ":reverb_service_cc_grpc_proto",
+        ":reverb_service_cc_grpc",
         ":reverb_service_cc_proto",
         ":schema_cc_proto",
         "//reverb/cc/platform:hash_map",
@@ -257,17 +277,18 @@ reverb_cc_library(
         "//reverb/cc/support:signature",
         "//reverb/cc/support:tf_util",
         "//reverb/cc/support:trajectory_util",
-    ] + reverb_tf_deps() + reverb_absl_deps() + reverb_grpc_deps(),
+        "@com_google_absl//absl/random",
+    ]),
 )
 
-reverb_cc_library(
+cc_library(
     name = "streaming_trajectory_writer",
     srcs = ["streaming_trajectory_writer.cc"],
     hdrs = ["streaming_trajectory_writer.h"],
     visibility = ["//reverb:__subpackages__"],
-    deps = [
+    deps = depset([
         ":chunker",
-        ":reverb_service_cc_grpc_proto",
+        ":reverb_service_cc_grpc",
         ":reverb_service_cc_proto",
         ":schema_cc_proto",
         ":trajectory_writer",
@@ -278,15 +299,15 @@ reverb_cc_library(
         "//reverb/cc/support:grpc_util",
         "//reverb/cc/support:key_generators",
         "//reverb/cc/support:signature",
-    ] + reverb_tf_deps() + reverb_absl_deps() + reverb_grpc_deps(),
+    ]),
 )
 
-reverb_cc_test(
+cc_test(
     name = "trajectory_writer_test",
     srcs = ["trajectory_writer_test.cc"],
     deps = [
         ":chunker",
-        ":reverb_service_cc_grpc_proto",
+        ":reverb_service_cc_grpc",
         ":reverb_service_cc_proto",
         ":trajectory_writer",
         "//reverb/cc/platform:logging",
@@ -297,15 +318,15 @@ reverb_cc_test(
         "//reverb/cc/support:signature",
         "//reverb/cc/testing:proto_test_util",
         "//reverb/cc/testing:tensor_testutil",
-    ] + reverb_tf_deps() + reverb_grpc_deps() + reverb_absl_deps(),
+    ]
 )
 
-reverb_cc_test(
+cc_test(
     name = "streaming_trajectory_writer_test",
     srcs = ["streaming_trajectory_writer_test.cc"],
     deps = [
         ":chunker",
-        ":reverb_service_cc_grpc_proto",
+        ":reverb_service_cc_grpc",
         ":reverb_service_cc_proto",
         ":streaming_trajectory_writer",
         "//reverb/cc/platform:logging",
@@ -314,15 +335,15 @@ reverb_cc_test(
         "//reverb/cc/support:signature",
         "//reverb/cc/testing:proto_test_util",
         "//reverb/cc/testing:tensor_testutil",
-    ] + reverb_tf_deps() + reverb_grpc_deps() + reverb_absl_deps(),
+    ]
 )
 
-reverb_cc_library(
+cc_library(
     name = "chunker",
     srcs = ["chunker.cc"],
     hdrs = ["chunker.h"],
     visibility = ["//reverb:__subpackages__"],
-    deps = [
+    deps = depset([
         ":schema_cc_proto",
         ":tensor_compression",
         "//reverb/cc/platform:hash_map",
@@ -332,10 +353,11 @@ reverb_cc_library(
         "//reverb/cc/support:signature",
         "//reverb/cc/support:tf_util",
         "//reverb/cc/support:trajectory_util",
-    ] + reverb_tf_deps() + reverb_absl_deps(),
+        "@com_google_absl//absl/random",
+    ]),
 )
 
-reverb_cc_test(
+cc_test(
     name = "chunker_test",
     srcs = ["chunker_test.cc"],
     deps = [
@@ -346,10 +368,10 @@ reverb_cc_test(
         "//reverb/cc/support:signature",
         "//reverb/cc/testing:proto_test_util",
         "//reverb/cc/testing:tensor_testutil",
-    ] + reverb_tf_deps() + reverb_absl_deps(),
+    ]
 )
 
-reverb_cc_library(
+cc_library(
     name = "client",
     srcs = ["client.cc"],
     hdrs = ["client.h"],
@@ -357,7 +379,7 @@ reverb_cc_library(
     deps = [
         ":chunker",
         ":patterns_cc_proto",
-        ":reverb_service_cc_grpc_proto",
+        ":reverb_service_cc_grpc",
         ":reverb_service_cc_proto",
         ":sampler",
         ":schema_cc_proto",
@@ -371,41 +393,75 @@ reverb_cc_library(
         "//reverb/cc/support:grpc_util",
         "//reverb/cc/support:signature",
         "//reverb/cc/support:uint128",
-    ] + reverb_grpc_deps() + reverb_absl_deps(),
+        "@com_google_absl//absl/random",
+    ]
 )
 
-reverb_cc_proto_library(
+proto_library(
+    name = "schema_proto",
+    srcs = ["schema.proto"],
+    deps = [
+        "@local_config_tf//:tensor_proto",
+        "@local_config_tf//:struct_proto",
+        "@com_google_protobuf//:timestamp_proto",
+    ],
+    # visibility = ["//visibility:public"],
+)
+
+cc_proto_library(
     name = "schema_cc_proto",
-    srcs = ["schema.proto"],
+    deps = [":schema_proto"],
 )
 
-reverb_py_proto_library(
+py_proto_library(
     name = "schema_py_pb2",
-    srcs = ["schema.proto"],
-    deps = [":schema_cc_proto"],
+    deps = [":schema_proto"],
 )
 
-reverb_cc_proto_library(
+proto_library(
+    name = "patterns_proto",
+    srcs = ["patterns.proto"],
+    deps = [
+        "@local_config_tf//:tensor_proto",
+        "@local_config_tf//:struct_proto",
+        "@local_config_tf//:resource_handle_proto",
+        "@local_config_tf//:tensor_shape_proto",
+        "@local_config_tf//:types_proto",
+    ]
+)
+
+cc_proto_library(
     name = "patterns_cc_proto",
-    srcs = ["patterns.proto"],
-    visibility = ["//reverb:__subpackages__"],
+    deps = [":patterns_proto"],
 )
 
-reverb_py_proto_library(
+py_proto_library(
     name = "patterns_py_pb2",
-    srcs = ["patterns.proto"],
-    deps = [":patterns_cc_proto"],
+    deps = [":patterns_proto"],
 )
 
-reverb_cc_proto_library(
+proto_library(
+    name = "reverb_service_proto",
+    srcs = ["reverb_service.proto"],
+    deps = [
+        ":schema_proto",
+        "@local_config_tf//:tensor_proto",
+        "@local_config_tf//:struct_proto",
+        "@local_config_tf//:resource_handle_proto",
+        "@local_config_tf//:tensor_shape_proto",
+        "@local_config_tf//:types_proto",
+    ],
+)
+
+cc_proto_library(
     name = "reverb_service_cc_proto",
-    srcs = ["reverb_service.proto"],
-    deps = [":schema_cc_proto"],
+    deps = [":reverb_service_proto"],
 )
 
-reverb_cc_grpc_library(
-    name = "reverb_service_cc_grpc_proto",
-    srcs = ["reverb_service.proto"],
+cc_grpc_library(
+    name = "reverb_service_cc_grpc",
+    srcs = [":reverb_service_proto"],
+    grpc_only = True,
     generate_mocks = True,
     visibility = [
         "//reverb:__subpackages__",
@@ -413,7 +469,19 @@ reverb_cc_grpc_library(
     deps = [":reverb_service_cc_proto"],
 )
 
-reverb_cc_library(
+py_proto_library(
+    name = "reverb_service_py_pb2",
+    deps = [":reverb_service_proto"],
+)
+
+py_grpc_library(
+    name = "reverb_service_py_pb2_grpc",
+    srcs = [":reverb_service_proto"],
+    deps = [":reverb_service_py_pb2"],
+)
+
+
+cc_library(
     name = "reverb_service_impl",
     srcs = ["reverb_service_impl.cc"],
     hdrs = [
@@ -421,7 +489,7 @@ reverb_cc_library(
     ],
     deps = [
         ":reverb_server_reactor",
-        ":reverb_service_cc_grpc_proto",
+        ":reverb_service_cc_grpc",
         ":reverb_service_cc_proto",
         ":schema_cc_proto",
         ":table",
@@ -433,11 +501,13 @@ reverb_cc_library(
         "//reverb/cc/support:grpc_util",
         "//reverb/cc/support:trajectory_util",
         "//reverb/cc/support:uint128",
-    ] + reverb_grpc_deps() + reverb_absl_deps(),
-    alwayslink = 1,
+        "@com_google_absl//absl/random",
+        "@com_google_absl//absl/flags:flag",
+    ],
+    alwayslink = True,
 )
 
-reverb_cc_library(
+cc_library(
     name = "task_worker",
     hdrs = ["task_worker.h"],
     deps = [
@@ -448,10 +518,10 @@ reverb_cc_library(
         "//reverb/cc/platform:thread",
         "//reverb/cc/support:periodic_closure",
         "//reverb/cc/support:unbounded_queue",
-    ] + reverb_absl_deps(),
+    ]
 )
 
-reverb_cc_library(
+cc_library(
     name = "reverb_server_reactor",
     hdrs = ["reverb_server_reactor.h"],
     deps = [
@@ -459,17 +529,20 @@ reverb_cc_library(
         "//reverb/cc/platform:logging",
         "//reverb/cc/platform:status_macros",
         "//reverb/cc/support:grpc_util",
-    ] + reverb_grpc_deps() + reverb_absl_deps(),
+    ]
 )
 
-reverb_cc_library(
+cc_library(
     name = "thread_stats",
     srcs = ["thread_stats.cc"],
     hdrs = ["thread_stats.h"],
-    deps = reverb_absl_deps(),
+    deps = [
+        "@com_google_absl//absl/time",
+        "@com_google_absl//absl/status",
+    ],
 )
 
-reverb_cc_test(
+cc_test(
     name = "reverb_service_impl_test",
     srcs = ["reverb_service_impl_test.cc"],
     deps = [
@@ -485,18 +558,18 @@ reverb_cc_test(
         "//reverb/cc/selectors:interface",
         "//reverb/cc/selectors:uniform",
         "//reverb/cc/testing:proto_test_util",
-    ] + reverb_grpc_deps() + reverb_absl_deps() + reverb_tf_deps(),
+    ]
 )
 
-reverb_cc_test(
+cc_test(
     name = "thread_stats_test",
     srcs = ["thread_stats_test.cc"],
     deps = [
         ":thread_stats",
-    ] + reverb_absl_deps(),
+    ]
 )
 
-reverb_cc_test(
+cc_test(
     name = "structured_writer_test",
     srcs = ["structured_writer_test.cc"],
     deps = [
@@ -509,20 +582,21 @@ reverb_cc_test(
         "//reverb/cc/support:signature",
         "//reverb/cc/testing:proto_test_util",
         "//reverb/cc/testing:tensor_testutil",
-    ] + reverb_absl_deps() + reverb_tf_deps(),
+    ]
 )
 
-reverb_cc_library(
+cc_library(
     name = "structured_writer",
     srcs = ["structured_writer.cc"],
     hdrs = ["structured_writer.h"],
     visibility = ["//reverb:__subpackages__"],
-    deps = [
+    deps = depset([
         ":chunker",
         ":patterns_cc_proto",
         ":trajectory_writer",
         "//reverb/cc/platform:hash_map",
         "//reverb/cc/platform:logging",
         "//reverb/cc/platform:status_macros",
-    ] + reverb_absl_deps() + reverb_tf_deps(),
+        "@com_google_absl//absl/status:statusor",
+    ]),
 )
