--- a/reverb/cc/checkpointing/BUILD
+++ b/reverb/cc/checkpointing/BUILD
@@ -1,34 +1,32 @@
-load(
-    "//reverb/cc/platform:build_rules.bzl",
-    "reverb_absl_deps",
-    "reverb_cc_library",
-    "reverb_cc_proto_library",
-    "reverb_py_proto_library",
-)
+load("@rules_cc//cc:defs.bzl", "cc_library", "cc_proto_library")
+load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library")
 
 package(default_visibility = ["//reverb:__subpackages__"])
 
 licenses(["notice"])
 
-reverb_cc_proto_library(
-    name = "checkpoint_cc_proto",
+proto_library(
+    name = "checkpoint_proto",
     srcs = ["checkpoint.proto"],
     deps = [
-        "//reverb/cc:schema_cc_proto",
+        "//reverb/cc:schema_proto",
+        "@local_config_tf//:struct_proto",
     ],
 )
 
-reverb_cc_library(
+cc_proto_library(
+    name = "checkpoint_cc_proto",
+    deps = [":checkpoint_proto"],
+)
+
+cc_library(
     name = "interface",
     hdrs = ["interface.h"],
-    deps = ["//reverb/cc:table"] + reverb_absl_deps(),
+    deps = ["//reverb/cc:table"]
 )
 
-reverb_py_proto_library(
+py_proto_library(
     name = "checkpoint_py_pb2",
-    srcs = ["checkpoint.proto"],
-    deps = [
-        ":checkpoint_cc_proto",
-        "//reverb/cc:schema_cc_proto",
-    ],
+    deps = [":checkpoint_proto"],
 )
