--- a/reverb/cc/support/BUILD
+++ b/reverb/cc/support/BUILD
@@ -1,45 +1,36 @@
-load(
-    "//reverb/cc/platform:build_rules.bzl",
-    "reverb_absl_deps",
-    "reverb_cc_library",
-    "reverb_cc_test",
-    "reverb_grpc_deps",
-    "reverb_tf_deps",
-)
+load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 
 package(default_visibility = ["//reverb:__subpackages__"])
 
 licenses(["notice"])
 
-reverb_cc_library(
+cc_library(
     name = "uint128",
     hdrs = ["uint128.h"],
     deps = [
         "//reverb/cc:schema_cc_proto",
-    ] + reverb_absl_deps(),
+    ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "grpc_util",
     hdrs = ["grpc_util.h"],
-    deps = reverb_tf_deps() + reverb_grpc_deps() + reverb_absl_deps(),
 )
 
-reverb_cc_library(
+cc_library(
     name = "queue",
     hdrs = ["queue.h"],
     deps = [
         "//reverb/cc/platform:logging",
-    ] + reverb_absl_deps() + reverb_tf_deps(),
+    ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "cleanup",
     hdrs = ["cleanup.h"],
-    deps = reverb_absl_deps(),
 )
 
-reverb_cc_test(
+cc_test(
     name = "cleanup_test",
     srcs = ["cleanup_test.cc"],
     deps = [
@@ -47,7 +38,7 @@ reverb_cc_test(
     ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "intrusive_heap",
     srcs = ["intrusive_heap.cc"],
     hdrs = ["intrusive_heap.h"],
@@ -56,25 +47,27 @@ reverb_cc_library(
     ],
 )
 
-reverb_cc_test(
+cc_test(
     name = "intrusive_heap_test",
     srcs = ["intrusive_heap_test.cc"],
     deps = [
         ":intrusive_heap",
-    ] + reverb_absl_deps(),
+    ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "periodic_closure",
     srcs = ["periodic_closure.cc"],
     hdrs = ["periodic_closure.h"],
     deps = [
         "//reverb/cc/platform:logging",
         "//reverb/cc/platform:thread",
-    ] + reverb_absl_deps() + reverb_tf_deps(),
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
+    ],
 )
 
-reverb_cc_test(
+cc_test(
     name = "queue_test",
     srcs = ["queue_test.cc"],
     deps = [
@@ -82,20 +75,20 @@ reverb_cc_test(
         "//reverb/cc/platform:logging",
         "//reverb/cc/platform:status_matchers",
         "//reverb/cc/platform:thread",
-    ] + reverb_absl_deps(),
+    ],
 )
 
-reverb_cc_test(
+cc_test(
     name = "periodic_closure_test",
     srcs = ["periodic_closure_test.cc"],
     deps = [
         ":periodic_closure",
         "//reverb/cc/platform:status_matchers",
         "//reverb/cc/testing:time_testutil",
-    ] + reverb_absl_deps() + reverb_tf_deps(),
+    ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "signature",
     srcs = ["signature.cc"],
     hdrs = ["signature.h"],
@@ -107,38 +100,38 @@ reverb_cc_library(
         "//reverb/cc/platform:hash_set",
         "//reverb/cc/platform:logging",
         "//reverb/cc/platform:status_macros",
-    ] + reverb_tf_deps() + reverb_absl_deps(),
+    ],
 )
 
-reverb_cc_test(
+cc_test(
     name = "signature_test",
     srcs = ["signature_test.cc"],
     deps = [
         ":signature",
         "//reverb/cc/platform:status_matchers",
         "//reverb/cc/testing:proto_test_util",
-    ] + reverb_tf_deps() + reverb_absl_deps(),
+    ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "state_statistics",
     hdrs = [
         "state_statistics.h",
     ],
     deps = [
         "//reverb/cc/platform:hash_map",
-    ] + reverb_absl_deps() + reverb_tf_deps(),
+    ],
 )
 
-reverb_cc_test(
+cc_test(
     name = "state_statistics_test",
     srcs = ["state_statistics_test.cc"],
     deps = [
         ":state_statistics",
-    ] + reverb_tf_deps() + reverb_absl_deps(),
+    ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "task_executor",
     srcs = ["task_executor.cc"],
     hdrs = ["task_executor.h"],
@@ -147,33 +140,32 @@ reverb_cc_library(
         "//reverb/cc/platform:thread",
         "//reverb/cc/support:periodic_closure",
         "//reverb/cc/support:unbounded_queue",
-    ] + reverb_absl_deps(),
+    ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "tf_util",
     hdrs = ["tf_util.h"],
     deps = [
-    ] + reverb_absl_deps() + reverb_tf_deps(),
+    ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "unbounded_queue",
     hdrs = ["unbounded_queue.h"],
-    deps = reverb_absl_deps(),
 )
 
-reverb_cc_test(
+cc_test(
     name = "unbounded_queue_test",
     srcs = ["unbounded_queue_test.cc"],
     deps = [
         ":unbounded_queue",
         "//reverb/cc/platform:logging",
         "//reverb/cc/platform:thread",
-    ] + reverb_absl_deps() + reverb_tf_deps(),
+    ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "trajectory_util",
     srcs = ["trajectory_util.cc"],
     hdrs = ["trajectory_util.h"],
@@ -184,10 +176,10 @@ reverb_cc_library(
         "//reverb/cc/platform:hash_set",
         "//reverb/cc/platform:logging",
         "//reverb/cc/platform:status_macros",
-    ] + reverb_tf_deps() + reverb_absl_deps(),
+    ],
 )
 
-reverb_cc_test(
+cc_test(
     name = "trajectory_util_test",
     srcs = ["trajectory_util_test.cc"],
     deps = [
@@ -198,11 +190,10 @@ reverb_cc_test(
         "//reverb/cc/platform:status_matchers",
         "//reverb/cc/testing:proto_test_util",
         "//reverb/cc/testing:tensor_testutil",
-    ] + reverb_tf_deps(),
+    ],
 )
 
-reverb_cc_library(
+cc_library(
     name = "key_generators",
     hdrs = ["key_generators.h"],
-    deps = reverb_absl_deps(),
 )
