--- a/reverb/cc/table_extensions/BUILD
+++ b/reverb/cc/table_extensions/BUILD
@@ -1,23 +1,17 @@
-load(
-    "//reverb/cc/platform:build_rules.bzl",
-    "reverb_absl_deps",
-    "reverb_cc_library",
-    "reverb_tf_deps",
-)
-
+load("@rules_cc//cc:defs.bzl", "cc_library")
 package(default_visibility = ["//reverb:__subpackages__"])
 
 licenses(["notice"])
 
-reverb_cc_library(
+cc_library(
     name = "interface",
     hdrs = ["interface.h"],
     deps = [
         "//reverb/cc:schema_cc_proto",
-    ] + reverb_absl_deps() + reverb_tf_deps(),
+    ]# + reverb_absl_deps()
 )
 
-reverb_cc_library(
+cc_library(
     name = "base",
     srcs = ["base.cc"],
     hdrs = ["base.h"],
@@ -26,5 +20,5 @@ reverb_cc_library(
         "//reverb/cc:schema_cc_proto",
         "//reverb/cc:table",
         "//reverb/cc/platform:logging",
-    ] + reverb_absl_deps(),
+    ]
 )
