--- a/.bazelrc
+++ b/.bazelrc
@@ -4,6 +4,8 @@ build --define=grpc_no_ares=true
 # Suppress all warning messages.
 build:short_logs --output_filter=DONT_MATCH_ANYTHING
 
+build --copt="-fvisibility=hidden"
+
 # Force python3
 build --action_env=PYTHON_BIN_PATH=python3
 build --repo_env=PYTHON_BIN_PATH=python3
@@ -14,15 +16,13 @@ build:manylinux2014 --crosstool_top=//third_party/toolchains/preconfig/ubuntu16.
 build -c opt
 build --cxxopt="-std=c++17"
 build --host_cxxopt="-std=c++17"
-# We can remove this flag (we keep it explicit for now)
-build --cxxopt="-D_GLIBCXX_USE_CXX11_ABI=1"
-build --host_cxxopt="-D_GLIBCXX_USE_CXX11_ABI=1"
 build --auto_output_filter=subpackages
-build --copt="-Wall" --copt="-Wno-sign-compare"
-build --linkopt="-lrt -lm"
+
+build --action_env MACOSX_DEPLOYMENT_TARGET=10.14
+
 # We build with AVX and eigen byte alignment to match tensorflow's (and Eigen)
 # pip package byte alignment.  See b/186669968 for more details.
-build --copt=-mavx --copt=-DEIGEN_MAX_ALIGN_BYTES=64
+build --copt=-DEIGEN_MAX_ALIGN_BYTES=64
 
 # TF isn't built in dbg mode, so our dbg builds will segfault due to inconsistency
 # of defines when using tf's headers.  In particular in refcount.h.
